# BabyTracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  feature-ideas.md  frontend-deps-analysis.md  positivefeedbackfeature.md  science.md  user-manual.md
.github/workflows/: ci.yml  deploy.yml
backend/: .coverage  .env.example  alembic.ini  coverage.xml  gen_scenario_data.py  gen_test_data.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 2e5ff7703cb2_add_baby_id_to_events.py  51aeae57cfeb_add_date_of_birth_to_babies.py  a1b2c3d4e5f6_rename_diaper_to_output.py  c834c794ba75_initial_schema.py  d4e5f6a7b8c9_add_vitamin_d_event_type.py  e5f6a7b8c9d0_unify_feed_metadata.py  f3a8c912d047_add_index_event_baby_timestamp.py
backend/app/: auth.py  config.py  limiter.py  main.py  utils.py
backend/app/db/: database.py  queries.py
backend/app/models/: __init__.py  baby.py  event.py  user.py  user_baby.py
backend/app/routers/: auth.py  events.py  leaderboards.py  stats.py
backend/app/schemas/: event.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_leaderboards.py  test_stats.py  test_utils.py
frontend/: index.html  package-lock.json  package.json  pwa-assets.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  globals.d.ts  index.css  main.tsx
frontend/src/components/: BottomNav.tsx  InstallPrompt.tsx  NightToggle.tsx  RequireAuth.tsx
frontend/src/contexts/: LeaderboardContext.tsx  NightModeContext.tsx
frontend/src/hooks/: useNightMode.ts  usePullToRefresh.ts  useSync.ts  useTimeSince.ts  useTimer.ts
frontend/src/lib/: api.ts  auth.ts  chartUtils.ts  clusterFeeding.ts  dailyStory.ts  db.ts  time.ts  (+10 more)
memory/: MEMORY.md  feedback_undo_scope.md
scripts/: create_realistic_testdata.py  seed_screenshots.py
(+38 files in other folders)
