[project]
name = "babytracker-api"
version = "0.1.0"
description = "Baby Tracker API"
authors = [
    {name = "no"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "greenlet (>=3.4.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pydantic-settings (>=2.0,<3.0)"
]


[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "seed.py"]
concurrency = ["thread", "greenlet"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
